2007-10-22  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Utilities.cs, src/GphotoException.cs, src/File.cs, src/FileSystem.cs,
	  src/ErrorCode.cs, src/Camera.cs, src/Abilities.cs: Added XML
	  documentation for all public methods/classes

2007-10-21  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/GphotoException.cs, src/ErrorCode.cs, src/FileSystem.cs,
	  src/Base/CameraWidget.cs, src/Base/PortInfoList.cs,
	  src/Base/CameraFilesystem.cs, src/Base/PortInfo.cs,
	  src/Base/CameraList.cs, src/Base/Context.cs, src/Base/Port.cs,
	  src/Base/Object.cs, src/Base/ErrorCodes.cs, src/Base/Camera.cs,
	  src/Base/CameraFile.cs, src/Base/CameraAbilitiesList.cs: Since the old
	  API has to be broken to support 64bit linux, i might as well go the
	  whole hog and hide all the old API from public view to force dev's to
	  switch to the newer API. This way when it changes again, the users won't
	  be affected.

2007-10-20  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: If .Connect() fails, clean up and rethrow the exception

2007-10-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added the last-ditch parser to handle invalid XML in a sane
	  way. It should work on 99% of the 'invalid' xml.

2007-10-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: Compile fix

2007-10-18  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-10-17  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Utilities.cs, src/Camera.cs, src/Makefile.am,
	  src/Base/CameraFilesystem.cs, src/Base/Camera.cs, libgphoto2-sharp.mdp:
	  Added detection for 64bit systems and return an empty camera list for
	  those systems as they are not supported.

2007-10-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/Camera.cs: Added debug out

2007-10-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFilesystem.cs, src/Base/Camera.cs: First attempt at working
	  around the 64bit long issue.

2007-10-14  Alan McGovern <alan.mcgovern@gmail.com> 
